--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Ignoring everything in node_modules
 **/node_modules
 # Ignoring everthing in packages
-
-
+**/packages
 #ignoring itself
 .gitignore
