--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "express-handlebars": "^6.0.7",
         "handlebars": "^4.7.7",
         "node.js": "^0.0.1-security",
+        "pdfjs": "^2.5.3",
         "unsemantic": "^1.3.0"
     }
 }
